@@ -6,6 +6,10 @@ Platform 2.14
   which can be set to "false" in order to omit the "host" tag from metrics
   reported to Pulse.
 
+* Library Upgrades
+
+  - Jetty to 9.4.21 (was 9.4.20) (various HTTP/2 denial-of-service fixes)
+
 Platform 2.13
 
 * Library Upgrades
